Fix image resizing and img credits

--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
     <title>Sign-up</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main class="card-container">
         <section class="left-hero">
-
             <div class="logo">
                 <img src="images/Triforce.svg.png" alt="Triforce" class="triforce">
                 <h1 class="zelda">Journey Through Hyrule</h1>
             </div>
-            <p class="quote">Photo by Halie West on UnSplash</p>
+            <p class="img-quote">Photo by FORMAT arw on UnSplash</p>
         </section>
 
         <section class="right-hero">
             <article class="top-text left-padding">
-                <p class="text-top">This is not a real online service! In the shadow of the haunting Majora's Mask, worn elegantly by our
+                <p class="text-top">This is not a real online service! In the shadow of the haunting Majora's Mask, worn
+                    elegantly by our
                     Zelda community member, we invite you to journey with us into the immersive world of Hyrule.</p>
-                <p class="text-top">Join the ranks of Link, Zelda, and countless heroes by signing up to our community today! Create an
+                <p class="text-top">Join the ranks of Link, Zelda, and countless heroes by signing up to our community
+                    today! Create an
                     account and enjoy the full experience of being part of this legendary adventure.</p>
                 <figure class="remote-text">
-                    <blockquote> 
+                    <blockquote>
                         <p class="quote-text">
-                        It's dangerous to go alone! Take this.</p>
-                    </blockquote>    
-                        <figcaption>- Old Man, <cite>The Legend of Zelda</cite></figcaption>
-
-                    </figure>
+                            It's dangerous to go alone! Take this.</p>
+                    </blockquote>
+                    <figcaption>- Old Man, <cite>The Legend of Zelda</cite></figcaption>
+                </figure>
             </article>
 
             <form action="#">
@@ -73,12 +73,12 @@
                         <label for="confirm-password">Confirm Password</label>
                         <input type="password" name="confirm-password" id="confirm-password">
                     </div>
-                    </div>  
+                </div>
 
-                    <div class="left-padding button">
-                        <button type="submit">Create Account</button>
-                    </div>
-               
+                <div class="left-padding button">
+                    <button type="submit">Create Account</button>
+                </div>
+
             </form>
 
             <div class="log-in left-padding">
@@ -89,11 +89,11 @@
 
     </main>
     <script>
-    document.querySelectorAll('input, button').forEach(el => {
-  el.addEventListener('focus', e => e.preventDefault());
-});
+        document.querySelectorAll('input, button').forEach(el => {
+            el.addEventListener('focus', e => e.preventDefault());
+        });
 
-</script>
+    </script>
 </body>
 
 
