--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 <figure class="remote-text">
                     <blockquote>
                         <p class="quote-text">
-                            It's dangerous to go alone! Take this.</p>
+                            It's dangerous to go alone! Take this. <span class="sword">@</span></p>
                     </blockquote>
                     <figcaption>- Old Man, <cite>The Legend of Zelda</cite></figcaption>
                 </figure>
             </article>
 
-            <form action="#">
+            <form id="signupForm" action="#">
                 <div class="form left-padding">
                     <p class="form-title">Join us, and become a part of our legendary Zelda community. Adventure awaits!
                     </p>
@@ -61,17 +61,21 @@
 
                     <div class="input">
                         <label for="phone-number">Phone number</label>
-                        <input type="tel" name="phone-number" id="phone-number" minlength="9" maxlength="9">
+                        <input title="Please enter a valid phone number, example: 582-482-5847" type="tel"
+                            pattern="[0-9]{3}-?[0-9]{3}-?[0-9]{4}" name="phone-number" id="phone-number" minlength="9"
+                            placeholder="111-111-1111" required>
                     </div>
 
                     <div class="input">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
+                        <input title="Please enter a valid password, must be at least 6 characters long" type="password"
+                            name="password" id="password" minlength="6" required>
+                        <span id="passwordError" style="display: none; color: red;">Passwords do not match!</span>
                     </div>
 
                     <div class="input">
                         <label for="confirm-password">Confirm Password</label>
-                        <input type="password" name="confirm-password" id="confirm-password">
+                        <input type="password" name="confirm-password" id="confirm-password" minlength="6" required>
                     </div>
                 </div>
 
@@ -88,13 +92,40 @@
         </section>
 
     </main>
+
     <script>
-        document.querySelectorAll('input, button').forEach(el => {
-            el.addEventListener('focus', e => e.preventDefault());
+        const password1 = document.getElementById("password");
+        const password2 = document.getElementById("confirm-password");
+        const passwordError = document.getElementById("passwordError");
+        const signUpForm = document.getElementById("signupForm");
+
+        function validatePasswords() {
+            if (password1.value !== password2.value) {
+                password1.classList.add("error");
+                password2.classList.add("error");
+                passwordError.style.display = "block";
+            } else {
+                password1.classList.remove("error");
+                password2.classList.remove("error");
+                passwordError.style.display = "none";
+            }
+        }
+
+        signupForm.addEventListener('submit', function (event) {
+            if (password1.value !== password2.value) {
+                event.preventDefault();
+                passwordError.style.display = 'block';
+            } else {
+                passwordError.style.display = 'none';
+            }
         });
+
+        password1.addEventListener("input", validatePasswords);
+        password2.addEventListener("input", validatePasswords);
+
+
 
     </script>
 </body>
-
 
 </html>
